--- a/Nachhilfe/src/app/components/startseite/startseite.component.html
+++ b/Nachhilfe/src/app/components/startseite/startseite.component.html
@@ -1,1 +1,5 @@
-<p>startseite works!</p>
+<app-cards></app-cards>
+<div>
+  <button class="redirect-button" (click)="changeRoute()">melden Sie sich bei uns jetzt !
+  </button>
+</div>
