--- a/Nachhilfe/src/app/components/home/home.component.html
+++ b/Nachhilfe/src/app/components/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<body>
+  <h1>Light Nachhilfe</h1>
+  <div>
+    <button class="redirect-button" (click)="changeRoute()">zur Startseite
+    </button>
+  </div>
+  <div class="object-fit"><img src="../assets/images/schule.jpeg" alt="schule logo"/></div>
+  </body>
+
+
