--- a/Nachhilfe/src/app/components/table/table.component.html
+++ b/Nachhilfe/src/app/components/table/table.component.html
@@ -1,1 +1,30 @@
-<p>table works!</p>
+<div class="container mt-3">
+  <h3 class="m-3">Alle Einträge</h3>
+  <div class="table-responsive">
+    <table class="m-3 table table-striped table-hover">
+      <caption>Alle <code>members</code></caption>
+      <thead>
+        <tr>
+          <th scope="col ">Nr</th>
+          <th scope="col ">Vorname</th>
+          <th scope="col ">Nachname</th>
+          <th scope="col ">E-Mail</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td>
+            <a [href]="'mailto:'"><span class="bi bi-envelope px-5"></span></a>
+            <a > <span class=" bi bi-pencil-square px-5 "></span></a>
+            <span class=" bi bi-trash px-5 "></span>
+          </td>
+        </tr>
+      </tbody>
+
+    </table>
+  </div>
+</div>
+
