--- a/Nachhilfe/src/styles.css
+++ b/Nachhilfe/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+  background-color: rgb(175, 175, 175);
+  font-family: Verdana, sans-serif;
+  font-size: 16px;
+}
