--- a/Nachhilfe/src/app/components/cards/cards.component.html
+++ b/Nachhilfe/src/app/components/cards/cards.component.html
@@ -1,11 +1,76 @@
+<ul>
+  <li>
+    <img src="../assets/images/geometry.jpg"/>
+    <div class="details">
+      <div class="header">
+        <span class="name"> </span>
+      </div>
+      </div>
+      <div class="kurse-time">
+        <span>Time to cook about</span>
+        </div>
+      <li>
+     <img src="../assets/images/physik.jpg"/>
+     <div class="details">
+       <div class="header">
+         <span class="name"> </span>
+       </div>
+       </div>
+       <div class="kurse-time">
+         <span> Time to cook about</span>
+      </div>
+    <li>
+      <img src="../assets/images/chemie.jpg"/>
+      <div class="details">
+        <div class="header">
+          <span class="name"> </span>
+        </div>
+        </div>
+        <div class="kurse-time">
+          <span>
+            Time to cook about
+          </span>
+       </div>
+          <li>
+            <img src="../assets/images/Biologie.jpg"/>
+            <div class="details">
+              <div class="header">
+                <span class="name"></span>
+              </div>
+            </div>
+              <div class="kurse-time">
+                <span>
+                  Time to cook about
+                </span>
+              </div>
+            <li>
+        <img src="../assets/images/german.jpg"/>
+        <div class="details">
+          <div class="header">
+            <span class="name"> </span>
+          </div>
+          </div>
+          <div class="kurse-time">
+            <span>
+              Time to cook about
+            </span>
+         </div>
+        <li>
+            <img src="../assets/images/Englisch.jpg"/>
+            <div class="details">
+              <div class="header">
+                <span class="name"></span>
+              </div>
+              </div>
+              <div class="kurse-time">
+                <span>
+                  Time to cook about
+                </span>
+              </div>
+            </li>
+            </ul>
 
-<body>
-  <div class="card" style="width:400px">
-    <img class="card-img-top" src="img_avatar1.png" alt="Card image">
-    <div class="card-body">
-      <h4 class="card-title">John Doe</h4>
-      <p class="card-text">Some example text.</p>
-      <a href="#" class="btn btn-primary"></a>
-    </div>
-  </div>
-  </body>
+
+
+
+
