--- a/Nachhilfe/src/styles.css
+++ b/Nachhilfe/src/styles.css
@@ -4,3 +4,6 @@ body{
   font-family: Verdana, sans-serif;
   font-size: 16px;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
