--- a/Nachhilfe/src/app/components/cards/cards.component.html
+++ b/Nachhilfe/src/app/components/cards/cards.component.html
@@ -7,7 +7,7 @@
       </div>
       </div>
       <div class="kurse-time">
-        <span>Time to cook about</span>
+        <span></span>
         </div>
       <li>
      <img src="../assets/images/physik.jpg"/>
@@ -17,7 +17,7 @@
        </div>
        </div>
        <div class="kurse-time">
-         <span> Time to cook about</span>
+         <span> </span>
       </div>
     <li>
       <img src="../assets/images/chemie.jpg"/>
@@ -28,7 +28,7 @@
         </div>
         <div class="kurse-time">
           <span>
-            Time to cook about
+            
           </span>
        </div>
           <li>
@@ -40,7 +40,7 @@
             </div>
               <div class="kurse-time">
                 <span>
-                  Time to cook about
+                  
                 </span>
               </div>
             <li>
@@ -52,7 +52,7 @@
           </div>
           <div class="kurse-time">
             <span>
-              Time to cook about
+              
             </span>
          </div>
         <li>
@@ -64,7 +64,7 @@
               </div>
               <div class="kurse-time">
                 <span>
-                  Time to cook about
+                  
                 </span>
               </div>
             </li>
