--- a/Nachhilfe/src/app/register/register.component.css
+++ b/Nachhilfe/src/app/register/register.component.css
@@ -1,27 +1,25 @@
-.full-width {
-  width: 100%;
-}
 
-.shipping-card {
-  min-width: 120px;
-  margin: 20px auto;
-}
 
-.mat-radio-button {
-  display: block;
-  margin: 5px 0;
-}
+.redirect-button{
+  display: inline-block;
+  padding: 15px 25px;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #936bca;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+  float:right;
+  position: relative;
+  bottom: -1.20em;
+  left: -6.4em;
 
-.row {
-  display: flex;
-  flex-direction: row;
 }
-
-.col {
-  flex: 1;
-  margin-right: 20px;
-}
-
-.col:last-child {
-  margin-right: 0;
+.redirect-button:hover{
+  opacity: 1;
+  cursor: pointer;
 }
