--- a/Nachhilfe/src/app/components/add/add.component.html
+++ b/Nachhilfe/src/app/components/add/add.component.html
@@ -1,10 +1,7 @@
-
 <main class="d-flex min-vh-100">
   <fieldset class="container  mt-5">
-    <legend *ngIf="student" class="mb-4">Eintrag von {{ student.firstname }} {{ student.lastname }} aktualisieren
-    </legend>
-    <legend *ngIf="!student" class="mb-4">Eintrag aktualisieren</legend>
-    <form [formGroup]="form" (ngSubmit)="update()">
+    <legend  class="mb-4">Nue Schüler</legend>
+    <form >
       <div class="mb-3 row">
         <label class="col-2 col-form-label" for="firstname">Vorname</label>
         <div class="col-10">
@@ -26,25 +23,22 @@
         </div>
       </div>
       <div class="mb-3 row">
-        <label class="col-2 col-form-label" for="address">Adresse</label>
+        <label class="col-2 col-form-label" for="address">Wohnadresse</label>
         <div class="col-10">
-          <input type="text" class="col-10 form-control" id="address" placeholder="Wohnadresse" formControlName="addressControl" />
+          <input type="text" class="col-10 form-control" id="address" placeholder="Wohndresse" formControlName="addressControl" />
         </div>
       </div>
       <div class="mb-3 row">
-        <label class="col-2 col-form-label" for="kurse">Kurse</label>
+        <label class="col-2 col-form-label" for="address">kurse</label>
         <div class="col-10">
           <input type="text" class="col-10 form-control" id="kurse" placeholder="kurse" formControlName="kurseControl" />
         </div>
       </div>
       <div class="row ">
-        <button type="submit" class="col-5 btn btn-secondary">Aktualisieren</button>
+        <button type="submit" class="col-5 btn btn-secondary">Addieren</button>
         <div class="col-2"></div>
-        <button type="button" class="col-5 btn btn-secondary" (click)="cancel() ">Abbrechen</button>
+        <button type="button" class="col-5 btn btn-secondary" (click)="cancel()">Abbrechen</button>
       </div>
     </form>
   </fieldset>
 </main>
-
-
-
