--- a/Nachhilfe/src/app/components/cards/cards.component.html
+++ b/Nachhilfe/src/app/components/cards/cards.component.html
@@ -23,14 +23,10 @@
       <img src="../assets/images/chemie.jpg"/>
       <div class="details">
         <div class="header">
-          <span class="name"> </span>
+          <span class="name"> Chemie Kurs</span>
         </div>
         </div>
-        <div class="kurse-time">
-          <span>
-            
-          </span>
-       </div>
+        <span class="kurse-time"></span>
           <li>
             <img src="../assets/images/Biologie.jpg"/>
             <div class="details">
