--- a/Nachhilfe/src/app/components/startseite/startseite.component.html
+++ b/Nachhilfe/src/app/components/startseite/startseite.component.html
@@ -1,6 +1,7 @@
 <app-cards></app-cards>
+<a routerLink="/startseite"></a>
 <div>
-  <button class="redirect-button" (click)="changeRoute()">melden Sie sich bei uns jetzt !
+  <button class="redirect-button" (click)="changeRoute()">zur Schüler Übersicht Tabelle 
   </button>
 </div>
 
