--- a/Nachhilfe/src/app/components/table/table.component.css
+++ b/Nachhilfe/src/app/components/table/table.component.css
@@ -4,6 +4,7 @@
   float:right;
   position: auto;
   font-size: medium;
+  margin-top: 20px;
 }
 
 .bi-trash{
@@ -12,4 +13,28 @@
 
 .bi-pencil-square{
   color:blue;
+}
+
+.redirect-button{
+  display: inline-block;
+  padding: 15px 25px;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #936bca;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+  float:right;
+  position: relative;
+  bottom: -1.20em;
+  left: -6.4em;
+
+}
+.redirect-button:hover{
+  opacity: 1;
+  cursor: pointer;
 }
