--- a/Nachhilfe/src/app/components/login/login.component.css
+++ b/Nachhilfe/src/app/components/login/login.component.css
@@ -1,6 +1,5 @@
 @import url('../../../../node_modules/bootstrap-icons/font/bootstrap-icons.css');
 
-
 .redirect-button{
   display: inline-block;
   padding: 15px 25px;
@@ -24,6 +23,19 @@
   opacity: 1;
   cursor: pointer;
 }
+
+mat-card {
+  margin: 5% 20%;
+}
+
+.full-width {
+  width: 100%;
+}
+
+mat-card-header {
+  margin-bottom: 3%;
+}
+
 
 mat-card {
   margin: 5% 20%;
