--- a/Nachhilfe/src/app/components/login/login.component.html
+++ b/Nachhilfe/src/app/components/login/login.component.html
@@ -26,7 +26,7 @@
       </p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button color="primary" type="submit">Login</button>
+      <button mat-raised-button color="primary" type="submit"(ngSubmit)="onSubmit()">Login</button>
     </mat-card-actions>
   </mat-card>
 </form>
