--- a/Nachhilfe/src/app/components/cards/cards.component.html
+++ b/Nachhilfe/src/app/components/cards/cards.component.html
@@ -3,66 +3,55 @@
     <img src="../assets/images/geometry.jpg"/>
     <div class="details">
       <div class="header">
-        <span class="name"> </span>
+        <span class="name"><h2>Mathe Kurs</h2></span>
       </div>
+      <span class="kurse-time">Montags vom 15:30 bis 17:30 Uhr und Freitags vom 13:00 bis 15:00 Uhr</span>
       </div>
-      <div class="kurse-time">
-        <span></span>
-        </div>
+
       <li>
      <img src="../assets/images/physik.jpg"/>
      <div class="details">
        <div class="header">
-         <span class="name"> </span>
+         <span class="name"><h2>Physik Kurs</h2></span>
        </div>
+       <span class="time">Donnerstags vom 13:00 bis 15:00 Uhr</span>
        </div>
-       <div class="kurse-time">
-         <span> </span>
-      </div>
+
     <li>
       <img src="../assets/images/chemie.jpg"/>
       <div class="details">
         <div class="header">
-          <span class="name"> Chemie Kurs</span>
+          <span class="name"><h2>Chemie Kurs</h2></span>
         </div>
+        <span class="time">Mitwochs vom 13:00 bis 15:00 Uhr</span>
         </div>
-        <span class="kurse-time"></span>
+
           <li>
             <img src="../assets/images/Biologie.jpg"/>
             <div class="details">
               <div class="header">
-                <span class="name"></span>
+                <span class="name"><h2>Biologie Kurs</h2></span>
               </div>
+              <span class="time">Montags vom 15:00 bis 17:00 Uhr</span>
             </div>
-              <div class="kurse-time">
-                <span>
-                  
-                </span>
-              </div>
+
             <li>
         <img src="../assets/images/german.jpg"/>
         <div class="details">
           <div class="header">
-            <span class="name"> </span>
+            <span class="name"><h2>Deutsch Kurs</h2></span>
           </div>
+          <span class="time">Dienstags vom 13:00 bis 15:00 Uhr </span>
           </div>
-          <div class="kurse-time">
-            <span>
-              
-            </span>
-         </div>
+
         <li>
             <img src="../assets/images/Englisch.jpg"/>
             <div class="details">
               <div class="header">
-                <span class="name"></span>
+                <span class="name"><h2>Englisch Kurs</h2></span>
               </div>
-              </div>
-              <div class="kurse-time">
-                <span>
-                  
-                </span>
-              </div>
+              <span class="time">Montags vom 13:00 bis 15:00 Uhr</span>
+            </div>
             </li>
             </ul>
 
