--- a/Nachhilfe/src/app/components/cards/cards.component.css
+++ b/Nachhilfe/src/app/components/cards/cards.component.css
@@ -32,24 +32,19 @@ img{
   size: 25rem;
 }
 
+h2{
+  text-align: center;
+  color:rgb(81, 13, 81);
+}
+
 .details{
   width: 100%;
   display: flex;
   flex-direction: column;
   flex:1 0;
   padding: 1rem;
-  color: black;
-  
-}
-
-
-
-
-
-.kurse-time{
-  margin: right;
-  border-radius: 1rem;
-  font-size: 1rem;
+  color:rgb(54, 30, 239);
+  text-align: center;
 
 }
 
