--- a/Nachhilfe/src/app/components/login/login.component.html
+++ b/Nachhilfe/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="loginForm" novalidate (ngSubmit)="onSubmit()">
   <mat-card class="shipping-card">
     <mat-card-header>
-      <mat-card-title>Login</mat-card-title>
+      <mat-card-title class="card-color">Login</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <p>
