--- a/Nachhilfe/src/app/components/register/register.component.css
+++ b/Nachhilfe/src/app/components/register/register.component.css
@@ -1,5 +1,18 @@
 .full-width {
   width: 100%;
+
+}
+
+
+mat-card-title{
+  color:rgb(60, 21, 60);
+}
+mat-card{
+  background-color: rgb(210, 190, 212,0.729);
+}
+
+mat-icon{
+  color:rgb(212, 64, 212);
 }
 
 .shipping-card {
@@ -8,6 +21,7 @@
   margin-left: auto;
   margin-right: auto;
   margin: 3% auto;
+  color: rgb(184, 68, 229);
 }
 
 .mat-radio-button {
@@ -18,13 +32,16 @@
 .row {
   display: flex;
   flex-direction: row;
+
 }
 
 .col {
   flex: 1;
   margin-right: 20px;
+
 }
 
 .col:last-child {
   margin-right: 0;
+
 }
