--- a/Nachhilfe/src/app/components/register/register.component.html
+++ b/Nachhilfe/src/app/components/register/register.component.html
@@ -5,10 +5,10 @@
     </mat-card-header>
     <mat-card-content>
 
-      <div class="row">
+      <div class="row" >
         <div class="col">
-          <mat-form-field hintLabel="Einloggen mit Nutzername und Passwort" class="full-width">
-            <input matInput placeholder="Nutzername" formControlName="username">
+          <mat-form-field  hintLabel="Einloggen mit Nutzername und Passwort" class="full-width">
+            <input  class= "input" matInput  placeholder="Nutzername" formControlName="username">
             <mat-icon matSuffix >person_add</mat-icon>
             <mat-error *ngIf="registerForm.controls['username'].hasError('required')">
               Nutzername <strong>erforderlich</strong>
