--- a/Nachhilfe/src/app/components/table/table.component.css
+++ b/Nachhilfe/src/app/components/table/table.component.css
@@ -15,12 +15,16 @@
   color:blue;
 }
 
+h2{
+  color:#6623c5;
+}
+
+
 .redirect-button{
   display: inline-block;
-  padding: 15px 25px;
+  padding:15px 25px;
   font-size: 24px;
   cursor: pointer;
-  text-align: center;
   text-decoration: none;
   outline: none;
   color: #fff;
@@ -29,10 +33,27 @@
   border-radius: 15px;
   box-shadow: 0 9px #999;
   float:right;
-  position: relative;
-  bottom: -1.20em;
-  left: -6.4em;
+  position:relative;
+  bottom: -.10rem;
+  left: -5.4rem;
 
+
+}
+.redirect-button2{
+  display: inline-block;
+  padding:15px 25px;
+  font-size: 24px;
+  cursor: pointer;
+  background-color: #936bca;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+  position:relative;
+  bottom: -.10rem;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  right:-6.4rem;
 }
 .redirect-button:hover{
   opacity: 1;
